[Fix]([0]CreateWorkspaceForm, [1]Workspace, [2]RegisterPage): [0] dispatching for teammates, [1] workspace name and username are aligned correctly, [2] username legnth error message dispays correctly

--- a/src/components/Workspace/styles.scss
+++ b/src/components/Workspace/styles.scss
@@ -25,6 +25,8 @@
   }
 
   &__inner {
+    display: flex;
+    flex-direction: column;
     color: $background-color;
     overflow: hidden;
     max-width: 140px;
@@ -40,6 +42,10 @@
   &__inner-two {
     display: flex;
     align-items: baseline;
+  }
+
+  &__container {
+    align-self: flex-start;
   }
 
   &__name {
